--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-psycopg2==2.5.3
-altgraph==0.10.2
-bdist-mpkg==0.5.0
 dj-database-url==0.4.2
-Django==1.6.6
+Django==1.9
 gunicorn==19.7.1
+whitenoise==3.3.1
